--- a/web/bundles/Ecommerce/views/index.html
+++ b/web/bundles/Ecommerce/views/index.html
@@ -2,27 +2,19 @@
 <html ng-app="app" >
 <head>
 	<title ></title>
-	 <link rel="stylesheet" href="http://localhost/ecommerce/plataforma/web/bundles/Ecommerce/css/bootstrap.min.css">
-     <link rel="stylesheet" href="http://localhost/ecommerce/plataforma/web/bundles/Ecommerce/css/style.css">
+	 <link rel="stylesheet" href="http://localhost/teste/ecommerce/web/bundles/Ecommerce/css/bootstrap.min.css">
+     <link rel="stylesheet" href="http://localhost/teste/ecommerce/web/bundles/Ecommerce/css/index.css">
 </head>
-<body >
-<div  ng-view>
-	
+<body>
 
-</div>
-
-
-
+<ng-view></ng-view>
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js">
 	</script>
 	<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js">
 	</script>
  
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.14/angular-route.js">
-    </script>
-	<script src="http://localhost/ecommerce/plataforma/web/bundles/Ecommerce/app/app.js">
-	</script>
-	<script src="http://localhost/ecommerce/plataforma/web/bundles/Ecommerce/app/controllers/controller.js">
-	</script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.14/angular-route.js"></script>
+	<script src="../app/app.js"></script>
+	<script src="../app/controllers/controller.js"></script>
 </body>
 </html>
